RESOLVED FIXED146367
WebPage::getPositionInformation() should not copy an image that is larger than the screen
https://bugs.webkit.org/show_bug.cgi?id=146367
Summary WebPage::getPositionInformation() should not copy an image that is larger tha...
Beth Dakin
Reported 2015-06-26 16:07:07 PDT
WebPage::getPositionInformation() should not copy an image that is larger than the screen
Attachments
Patch (4.45 KB, patch)
2015-06-26 16:11 PDT, Beth Dakin
thorton: review+
Beth Dakin
Comment 1 2015-06-26 16:11:16 PDT
Tim Horton
Comment 2 2015-06-26 16:44:44 PDT
Comment on attachment 255674 [details] Patch As discussed, please make this work with deviceScaleFactor≠1.
Beth Dakin
Comment 3 2015-06-26 16:49:30 PDT
Note You need to log in before you can comment on or make changes to this bug.