WebPage::getPositionInformation() should not copy an image that is larger than the screen https://bugs.webkit.org/show_bug.cgi?id=146367

Reviewed by Tim Horton.

Source/WebCore:

Export the rect version of this function too.
* platform/graphics/GraphicsContext.h:

Source/WebKit2:

Maintain aspectRatio, but scale down the buffer size if the image is larger than
the screen.
* WebProcess/WebPage/ios/WebPageIOS.mm:
(WebKit::WebPage::getPositionInformation):



Canonical link: https://commits.webkit.org/164451@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@186018 268f45cc-cd09-0410-ab3c-d52691b4dbfc